--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     margin: auto;
     padding: 30px !important;
     border-radius: 100px;
+  border: 10px solid bisque; 
    
 
 }
@@ -44,7 +45,7 @@ body{
 
 
 .titulo{
-    color: white;
+    color: bisque;
     text-align: center;
     font-size: 25px;
 }
@@ -57,6 +58,8 @@ body{
     margin-bottom: 15px;
     text-align: center;
     font-weight: bold;
+    background: limegreen;
+    color: white;
 }
 .off{
     width: 55px;
@@ -67,6 +70,8 @@ body{
     text-align: center;
     font-weight: bold;
     margin-right: 15px;
+    background: crimson;
+    color: white;
 }
 .inicio{
     width: 100px;
@@ -87,6 +92,16 @@ body{
     margin: 30px;
     float: right !important;
     text-align: center;
+}
+.restablecer{
+    width: 55px;
+    height: 55px;
+    background: orangered;
+    color: white;
+    border-radius: 60px;
+}
+.apagar{
+    background: darkblue !important;
 }
 
 
