--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
-    background: seagreen;
+    /* background: seagreen; */
+    background: darkcyan;
 }
 .cronometro{
     background: black;
@@ -18,20 +19,21 @@ body{
     width: 250px;
     height: 120px;
     margin: auto;
-    border-radius: 11px;
+    border-radius: 50px;
     background: rgb(100, 100, 100);
     margin-top: 20px;
-  
+    border:7px solid rgb(59, 59, 59);
    
 }
 .segundos1{
     width: 250px;
     height: 120px;
     margin: auto;
-    border-radius: 11px;
+    border-radius: 50px;
     background: whitesmoke;
     margin-top: 20px;
     text-align: center;
+    border:7px solid rgb(59, 59, 59);
 
    
 }
@@ -143,6 +145,7 @@ body{
     margin: 30px;
     float: right !important;
     text-align: center;
+    text-shadow: 3px 3px 3px black;
 }
 .restablecer{
     width: 55px;
